added functionality for mouse and x key

--- a/main.html
+++ b/main.html
@@ -9,11 +9,20 @@
 	<script src="js/app.js"></script>
 </head>
 <body>
+
 	<div class="main">
+		<div class='ready-hadouken-instr'>
+			<p>CLICK ON RYO TO FIRE!</p>
+		</div>
+		<div class='be-cool-instr'>
+			<P>HOLD DOWN THE "X" KEY TO STRIKE A POSE!</P>
+		</div>
+		<audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
 		<div class="ryu">
 			<div class="ryu-still"></div>
 			<div class="ryu-ready"></div>
 			<div class='ryu-throwing'></div>
+			<div class='ryu-cool'></div>
 		</div>
 		<div class="hadouken"></div>
 	</div>		
